--- a/symbiosis.html
+++ b/symbiosis.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    
+</body>
+</html>
 
 <nav>
     <ul>
@@ -16,7 +19,4 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
-</body>
-</html>
-
-<h2>Nachtfallen</h2>
+<h2>Symbiosis</h2>
