--- a/projekt1.html
+++ b/projekt1.html
@@ -21,15 +21,21 @@
 <div class="projekte">
     <div class="projekt-item">
         <h2>Nachtfallen</h2>
-        <img src="/Dateien/Blumen Kopie.png" class="Nachtfallen" alt="Nachtfallen">
+        <a href="nachtfallen.html">
+            <img src="/Dateien/Blumen Kopie.png" class="Nachtfallen" alt="Nachtfallen">
+        </a>
     </div>
     <div class="projekt-item">
         <h2>Symbiosis</h2>
-        <img src="/Dateien/Symbiosis-3.jpg" class="Symbiosis" alt="Symbiosis">
+        <a href="symbiosis.html">
+             <img src="/Dateien/Symbiosis-3.jpg" class="Symbiosis" alt="Symbiosis">
+        </a>
     </div>
     <div class="projekt-item">
         <h2>Schlehenschwärmer</h2>
-        <img src="/Dateien/Titelbild klein.jpg" class="Schlehenschwärmer" alt="Schlehenschwärmer">
+        <a href="schlehenschwärmer.html">
+            <img src="/Dateien/Titelbild klein.jpg" class="Schlehenschwärmer" alt="Schlehenschwärmer">
+        </a>
     </div>
 </div>
     
