--- a/index.html
+++ b/index.html
@@ -16,14 +16,28 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
-
 <h1>Leonie Birkmann</h1>
+
+<div class="intro">
+    <div class="modedesign">
+        <h2>Mode</h2>
+    </div>
+    <div class="und">
+        <h2>&</h2>
+    </div>
+    <div class="kommunikationsdesign">
+        <h2>Kommunikation</h2>
+    </div>
+</div>
 
 <div class="introvideo">
     <video width="300" autoplay muted loop playsinline class="no-picture-in-picture">
         <source src="Dateien/Teaser Symbiosis.mov" type="video/mp4">    
-</video>
+    </video>
+</div>
 
+<div class="introbilder">
+    <img src="/Dateien/Blumen Kopie.png" width="200">
 </div>
     
 </body>
