--- a/index.html
+++ b/index.html
@@ -16,29 +16,49 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
+
 <h1>Leonie Birkmann</h1>
 
-<div class="intro">
-    <div class="modedesign">
-        <h2>Mode</h2>
-    </div>
-    <div class="und">
-        <h2>&</h2>
-    </div>
-    <div class="kommunikationsdesign">
-        <h2>Kommunikation</h2>
-    </div>
+<div class="deckbild"></div>
+
+
+<div class="modedesign">
+    <h1>fashion</h1>
 </div>
+
+<div class="und">
+    <h1>&</h1>
+</div>
+    
+<div class="kommunikationsdesign">
+    <h1>communication</h1>
+</div>
+
+<div class="design">
+    <h1>design</h1>
+</div>
+
+
 
 <div class="introvideo">
     <video width="300" autoplay muted loop playsinline class="no-picture-in-picture">
-        <source src="Dateien/Teaser Symbiosis.mov" type="video/mp4">    
+        <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
     </video>
 </div>
 
 <div class="introbilder">
     <img src="/Dateien/Blumen Kopie.png" width="200">
 </div>
+
+<div class="born">
+    <h2>born and raised</h2>
+</div>
+
+<div class="berlin">
+    <h2>in berlin</h2>
+</div>
+
+
     
 </body>
 </html>
