--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <h1>Leonie Birkmann</h1>
 
+
 <div class="deckbild"></div>
 
 
@@ -58,6 +59,9 @@
     <h2>in berlin</h2>
 </div>
 
+<div class="fußleiste">
+    <a href="index.html">Leonie Birkmann</a>
+</div>
 
     
 </body>
