--- a/projekt1.html
+++ b/projekt1.html
@@ -16,28 +16,39 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
-<h2>Projekte</h2>
+<h1>Projekte</h1>
 
-<div class="projekte">
-    <div class="projekt-item">
-        <h2>Nachtfallen</h2>
-        <a href="nachtfallen.html">
-            <img src="/Dateien/Blumen Kopie.png" class="Nachtfallen" alt="Nachtfallen">
-        </a>
-    </div>
-    <div class="projekt-item">
-        <h2>Symbiosis</h2>
-        <a href="symbiosis.html">
-             <img src="/Dateien/Symbiosis-3.jpg" class="Symbiosis" alt="Symbiosis">
-        </a>
-    </div>
-    <div class="projekt-item">
-        <h2>Schlehenschwärmer</h2>
-        <a href="schlehenschwärmer.html">
-            <img src="/Dateien/Titelbild klein.jpg" class="Schlehenschwärmer" alt="Schlehenschwärmer">
-        </a>
-    </div>
+<div class="projektnachtfallen">
+    <a href="nachtfallen.html">
+        <img src="/Dateien/Nachtfallen quer6.png" width="650">
+    </a>
+    <h3>Nachtfallen</h3>
+</div>
+
+<div class="projektsymbiosis">
+    <a href="symbiosis.html">
+        <img src="/Dateien/Symbiosis-quer.jpg" width="650">
+    </a>
+    <h3>Symbiosis</h3>
 </div>
     
+<div class="projektschlehenschwärmer">
+    <a href="schlehenschwärmer.html">
+        <img src="/Dateien/01fb5fe6d4999a955041792dcba70f8a2469837887.jpg" width="650">
+    </a>
+    <h3>Schlehenschwärmer</h3>
+</div>
+
+<div class="projektei">
+    <a href="ausdemei.html">
+        <img src="/Dateien/IMG_8903h.jpg" width="650">
+    </a>
+    <h3>Aus dem Ei geschlüpft</h3>
+</div>
+
+<div class="fußleiste">
+    <a href="index.html">Leonie Birkmann</a>
+</div>
+            
 </body>
 </html>
