--- a/symbiosis.html
+++ b/symbiosis.html
@@ -19,4 +19,13 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
-<h2>Symbiosis</h2>
+<h1>Symbiosis</h1>
+
+<div class="symbiosisinfo">
+    <h3>Die Video Performance „Symbiosis – Wo wir zusammen endlos sind“ <br> ist inspiriert 
+        von den Verhaltensmustern und Dynamiken von Pilz-<br>gemeinschaften. Pilzwesen, 
+        die Idee einer Symbiose aus pilzlichem <br> Sein und menschlicher Gestalt werden zu den Akteuren.
+        Die Pilzwesen <br>nehmen verschiedene Gruppenkonstellationen ein, folgen keinen <br>individuellen Rollen. 
+        Sie funktionieren als Komplex, in dem alles fließt. 
+    </h3>
+</div>
