I changed a lot in every folder.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <h1>Leonie Birkmann</h1>
 
 
-<div class="deckbild"></div>
+<div class="deckbild">
+    <img src="/Dateien/KLeid leuchtend.png">
+</div>
 
 
 <div class="modedesign">
