--- a/symbiosis.html
+++ b/symbiosis.html
@@ -29,3 +29,30 @@
         Sie funktionieren als Komplex, in dem alles fließt. 
     </h3>
 </div>
+
+<div class="endlos">
+    <h2> Wo wir zusammen endlos sind
+    </h2>
+</div>
+
+<div class="symbiosisfoto1">
+    <img src="/Dateien/Symbiosis-3.jpg" width="600">
+    <p>Foto: Thero Mamani Valles</p>
+</div>
+
+<div class="symbiosisfoto2">
+    <img src="/Dateien/Symbiosis-4.jpg" width="400">
+    <p>Foto: Thero Mamani Valles</p>
+</div>
+
+<div class="symbiosisvideo">
+    <video autoplay muted loop playsinline class="no-picture-in-picture">
+        <source src="/Dateien/Symbiosis.mov" type="video/mp4">    
+    </video>
+</div>
+
+<div class="fußleistesymbiosis">
+    <a href="index.html">Leonie Birkmann</a>
+</div>
+        
+
