--- a/symbiosis.html
+++ b/symbiosis.html
@@ -47,7 +47,7 @@
 
 <div class="symbiosisvideo">
     <video autoplay muted loop playsinline class="no-picture-in-picture">
-        <source src="/Dateien/Symbiosis.mov" type="video/mp4">    
+        <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
     </video>
 </div>
 
