--- a/projekt1.html
+++ b/projekt1.html
@@ -20,7 +20,7 @@
 
 <div class="projektnachtfallen">
     <a href="nachtfallen.html">
-        <img src="/Dateien/Nachtfallen quer6.png" width="650">
+        <img src="/Dateien/Nachtfallen/Nachtfallen quer6.png" width="650">
     </a>
     <h3>Nachtfallen</h3>
 </div>
