--- a/symbiosis.html
+++ b/symbiosis.html
@@ -21,7 +21,7 @@
 
 <h1>Symbiosis</h1>
 
-<div class="symbiosisinfo">
+<div class="symbiosisinfo1">
     <h3>Die Video Performance „Symbiosis – Wo wir zusammen endlos sind“ <br> ist inspiriert 
         von den Verhaltensmustern und Dynamiken von Pilz-<br>gemeinschaften. Pilzwesen, 
         die Idee einer Symbiose aus pilzlichem <br> Sein und menschlicher Gestalt werden zu den Akteuren.
@@ -33,6 +33,13 @@
 <div class="endlos">
     <h2> Wo wir zusammen endlos sind
     </h2>
+</div>
+
+<div class="symbiosisinfo2">
+    <h3>Die Philosophie hinter den Pilzen dient dem <br> Kostümbild als Inspiration. 
+        Sinnbilder der Gemein- <br>schaft, Geburt, Geborgenheit und des Verfalls 
+        <br>spiegeln sich in den Designs wider. 
+    </h3>
 </div>
 
 <div class="symbiosisfoto1">
