--- a/Nachtfallen.html
+++ b/Nachtfallen.html
@@ -16,9 +16,6 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
-</body>
-</html>
-
 <h1>Nachtfallen</h1>
 
 <div class="nachtfalleninfo">
@@ -35,13 +32,32 @@
 </div>
 
 <div class="nachtfallenfoto1">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 1.png" width="600">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 1.png" width="400">
 </div>
 
 <div class="nachtfallenfoto2">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 2.png" width="600">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 2.png" width="400">
 </div>
 
 <div class="nachtfallenfoto3">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 3.png" width="600">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 3.png" width="400">
 </div>
+
+<div class="nachtfallenfoto4">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 4.png" width="400">
+</div>
+
+<div class="nachtfallenfoto5">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 5.png" width="400">
+</div>
+
+<div class="nachtfallenfoto6">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 6.png" width="400">
+</div>
+
+<div class="fußleistenacht">
+    <a href="index.html">Leonie Birkmann</a>
+</div>
+
+</body>
+</html>
