--- a/projekt1.html
+++ b/projekt1.html
@@ -20,7 +20,7 @@
 
 <div class="projektnachtfallen">
     <a href="nachtfallen.html">
-        <img src="/Dateien/Nachtfallen/Nachtfallen quer6.png" width="650">
+        <img src="/Dateien/Nachtfallen/Badewanne weiß.png" width="650">
     </a>
     <h3>Nachtfallen</h3>
 </div>
@@ -38,6 +38,14 @@
     </a>
     <h3>Schlehenschwärmer</h3>
 </div>
+
+<div class="projektwelkeweise">
+    <a href="welkeweise.html">
+        <img src="/Dateien/Welke Weise/WelkeWeisequer.jpg" width="650">
+    </a>
+    <h3>Welke Weise</h3>
+</div>
+
 
 <div class="projektei">
     <a href="ausdemei.html">
