--- a/schlehenschwärmer.html
+++ b/schlehenschwärmer.html
@@ -7,9 +7,6 @@
 </head>
 <body>
     
-</body>
-</html>
-
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -20,3 +17,40 @@
 </nav>
 
 <h1>Schlehenschwärmer</h1>
+
+<div class="schleheninfo1">
+    <h3>Motten gehören genau wie Schmetterlinge zur Ordnung der Lepi-<br>doptera.
+        Die grazilen, feingliedrigen Wesen sind in vielerlei Hinsicht<br> ambivalent. 
+        So stehen sie zwischen Schmetterling und Schädling, <br>zwischen Schatten und Licht, 
+        sind weder schwarz noch weiß. Sie<br> sind Zwischenraum und werden in der Kollektion 
+        Schlehen-<br>schwärmer zum Sinnbild für die Vielschichtigkeit von Wahrheiten. 
+    </h3>
+</div>
+
+<div class="schleheninfo2">
+    <h3>Durch die Behandlung mit Textilhärter, erlangen die applizierten, in Falten 
+        gelegten Stoffbahnen eine Formbeständigkeit, schichten sich und werden wie 
+        <br>die Flügel einer Motte zum Saum hin ausladender. 
+    </h3>
+</div>
+
+<div class="schlehenfoto1">
+    <img src="/Dateien/Schlehenschwärmer/IMG_E9678.JPG" width="600">
+</div>
+
+<div class="schlehenfoto2">
+    <img src="/Dateien/Schlehenschwärmer/Titelbild klein.jpg" width="400">
+</div>
+
+<div class="schlehenvideo">
+    <video autoplay muted loop playsinline class="no-picture-in-picture">
+        <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
+    </video>
+</div>
+
+<div class="fußleisteschlehen">
+    <a href="index.html">Leonie Birkmann</a>
+</div>
+
+</body>
+</html>
