--- a/welkeweise.html
+++ b/welkeweise.html
@@ -18,14 +18,41 @@
 
 <h1>Welke Weise</h1>
 
-<div class="nachtfalleninfo">
-    <h3>Das Projekt Nachtfallen befasst sich mit der Darstellung von Traum-<br>erlebnissen 
-        und erkundet die fragilen Grenzen zwischen 
-        Traum und <br>Realität. Während wir im Wachzustand eine lineare Vorstellung von<br>
-        Zeit haben, lösen sich diese Grenzen beim Träumen weitestgehend auf. 
+<div class="welkeweiseinfo">
+    <h3>Das in der Nekrose stehende Blatt, als Sinnbild für die Degeneration<br>
+         wurde zur Inspiration für die Kollektion Welke Weise.
+        Als Moment-<br>aufnahme innerhalb eines fortwährenden Kreislaufs aus Erblühen <br>
+        und Verblühen wird es zum Symbol der Verwandlung und visualisiert 
+        <br>die Vergänglichkeit als ästhetische Idee.   
+        
     </h3>
 </div>
 
+<div class="welkeweiseinfo2">
+    <h3>In seiner unbefangenen Schlichtheit wird das Weiß <br>
+        zu etwas Raumlosen und symbolisiert die Schwelle <br>
+        zwischen Abschluss und Beginn. 
+    </h3>
+</div>
+
+<div class="welkeweisefoto1">
+    <img src="/Dateien/Welke Weise/klein 1.jpg" width="600">
+</div>
+
+<div class="welkeweisefoto2">
+    <img src="/Dateien/Welke Weise/klein 2.jpg" width="400">
+</div>
+
+<div class="welkeweisevideo">
+    <video autoplay muted loop playsinline class="no-picture-in-picture">
+        <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
+    </video>
+</div>
+
+<div class="fußleistewelkeweise">
+    <a href="index.html">Leonie Birkmann</a>
+</div>
+        
 
 
 
