--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
 
 <h1>Leonie Birkmann</h1>
 
-
-<div class="deckbild">
-    <img src="/Dateien/KLeid leuchtend.png">
-</div>
-
-
 <div class="modedesign">
     <h1>fashion</h1>
 </div>
@@ -41,16 +35,10 @@
     <h1>design</h1>
 </div>
 
-
-
-<div class="introvideo">
-    <video width="300" autoplay muted loop playsinline class="no-picture-in-picture">
+<div class="homevideo">
+    <video autoplay muted loop playsinline class="no-picture-in-picture">
         <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
     </video>
-</div>
-
-<div class="introbilder">
-    <img src="/Dateien/Blumen Kopie.png" width="200">
 </div>
 
 <div class="born">
@@ -61,10 +49,5 @@
     <h2>in berlin</h2>
 </div>
 
-<div class="fußleiste">
-    <a href="index.html">Leonie Birkmann</a>
-</div>
-
-    
 </body>
 </html>
