--- a/welkeweise.html
+++ b/welkeweise.html
@@ -43,11 +43,27 @@
     <img src="/Dateien/Welke Weise/klein 2.jpg" width="400">
 </div>
 
-<div class="welkeweisevideo">
-    <video autoplay muted loop playsinline class="no-picture-in-picture">
-        <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
-    </video>
+<div class="welkeweisefoto3">
+    <img src="/Dateien/Welke Weise/klein 3.jpg" width="200">
 </div>
+
+<div class="welkeweisefoto4">
+    <img src="/Dateien/Welke Weise/IMG_3718.PNG" width="200">
+</div>
+
+<div class="welkeweisefoto5">
+    <img src="/Dateien/Welke Weise/03_IMG_6094.jpg" width="200">
+</div>
+
+<div class="welkeweisefoto6">
+    <img src="/Dateien/Welke Weise/IMG_3724.PNG" width="200">
+</div>
+
+<div class="welkeweisefoto7">
+    <img src="/Dateien/Welke Weise/IMG_4984.png" width="200">
+</div>
+
+
 
 <div class="fußleistewelkeweise">
     <a href="index.html">Leonie Birkmann</a>
