--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
 
 <div class="homevideo">
     <video autoplay muted loop playsinline class="no-picture-in-picture">
-        <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
+        <source src="/Dateien/Home/IMG_8517 - Trim.mp4" type="video/mp4">    
+    </video>
+</div>
+
+<div class="homevideo2">
+    <video width="300" autoplay muted loop playsinline class="no-picture-in-picture">
+        <source src="/Dateien/Home/IMG_8544 - Trim.mp4" type="video/mp4">    
     </video>
 </div>
 
