--- a/schlehenschwärmer.html
+++ b/schlehenschwärmer.html
@@ -39,12 +39,12 @@
 </div>
 
 <div class="schlehenfoto2">
-    <img src="/Dateien/Schlehenschwärmer/Titelbild klein.jpg" width="400">
+    <img src="/Dateien/Schlehenschwärmer/Titelbild kleihn.png" width="400">
 </div>
 
 <div class="schlehenvideo">
     <video autoplay muted loop playsinline class="no-picture-in-picture">
-        <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
+        <source src="/Dateien/Schlehenschwärmer/Schlehenschwärmer SS 21 - Trim.mp4" type="video/mp4">    
     </video>
 </div>
 
