--- a/kontakt.html
+++ b/kontakt.html
@@ -25,8 +25,10 @@
     </h3>
 </div>
 
-<div class="kontaktfoto">
-    <img src="/Dateien/Kontakt/IMG_4918.jpg" width="200">
+<div class="kontaktvideo">
+    <video width="300" autoplay muted loop playsinline class="no-picture-in-picture">
+        <source src="/Dateien/Home/IMG_8544 - Trim.mp4" type="video/mp4">    
+    </video>
 </div>
 
 <div class="fußleistekontakt">
