--- a/projekt1.html
+++ b/projekt1.html
@@ -20,28 +20,30 @@
 
 <div class="projektnachtfallen">
     <a href="nachtfallen.html">
-        <img src="/Dateien/Nachtfallen/Badewanne weiß.png" width="650">
+        <img src="/Dateien/Nachtfallen/Badewanne weiß.png" width="500">
     </a>
     <h3>Nachtfallen</h3>
 </div>
 
 <div class="projektsymbiosis">
     <a href="symbiosis.html">
-        <img src="/Dateien/Symbiosis-quer.jpg" width="650">
+        <video width="300" autoplay muted loop playsinline class="no-picture-in-picture">
+            <source src="/Dateien/Symbiosis/Symbiosis - Trim Gang.mp4" type="video/mp4">    
+        </video>
     </a>
     <h3>Symbiosis</h3>
 </div>
-    
+
 <div class="projektschlehenschwärmer">
     <a href="schlehenschwärmer.html">
-        <img src="/Dateien/01fb5fe6d4999a955041792dcba70f8a2469837887.jpg" width="650">
+        <img src="/Dateien/01fb5fe6d4999a955041792dcba70f8a2469837887.jpg" width="350">
     </a>
     <h3>Schlehenschwärmer</h3>
 </div>
 
 <div class="projektwelkeweise">
     <a href="welkeweise.html">
-        <img src="/Dateien/Welke Weise/WelkeWeisequer.jpg" width="650">
+        <img src="/Dateien/Welke Weise/WelkeWeisequer.jpg" width="500">
     </a>
     <h3>Welke Weise</h3>
 </div>
