--- a/projekt1.html
+++ b/projekt1.html
@@ -18,6 +18,9 @@
 
 <h1>Projekte</h1>
 
+<div class="custom-cursor" id="customCursor"></div>
+  <script src="script.js"></script>
+
 <div class="projektnachtfallen">
     <a href="nachtfallen.html">
         <img src="/Dateien/Nachtfallen/Badewanne weiß.png" width="500">
@@ -36,7 +39,7 @@
 
 <div class="projektschlehenschwärmer">
     <a href="schlehenschwärmer.html">
-        <img src="/Dateien/01fb5fe6d4999a955041792dcba70f8a2469837887.jpg" width="350">
+        <img src="/Dateien/Schlehenschwärmer/01fb5fe6d4999a955041792dcba70f8a2469837887.jpg" width="350">
     </a>
     <h3>Schlehenschwärmer</h3>
 </div>
