--- a/symbiosis.html
+++ b/symbiosis.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
+<div class="custom-cursor" id="customCursor"></div>
+  <script src="script.js"></script>
+
 <h1>Symbiosis</h1>
 
 <div class="symbiosisinfo1">
@@ -43,18 +46,18 @@
 </div>
 
 <div class="symbiosisfoto1">
-    <img src="/Dateien/Symbiosis-3.jpg" width="600">
+    <img src="/Dateien/Symbiosis/Symbiosis-3.jpg" width="600">
     <p>Foto: Thero Mamani Valles</p>
 </div>
 
 <div class="symbiosisfoto2">
-    <img src="/Dateien/Symbiosis-4.jpg" width="400">
+    <img src="/Dateien/Symbiosis/Symbiosis-4.jpg" width="400">
     <p>Foto: Thero Mamani Valles</p>
 </div>
 
 <div class="symbiosisvideo">
     <video autoplay muted loop playsinline class="no-picture-in-picture">
-        <source src="/Dateien/Teaser Symbiosis.mov" type="video/mp4">    
+        <source src="/Dateien/Symbiosis/Teaser Symbiosis.mov" type="video/mp4">    
     </video>
 </div>
 
