--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
+<div class="custom-cursor" id="customCursor"></div>
+  <script src="script.js"></script>
 
 <h1>Leonie Birkmann</h1>
 
