--- a/kontakt.html
+++ b/kontakt.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
+<div class="custom-cursor" id="customCursor"></div>
+  <script src="script.js"></script>
+
 <h1>Kontakt</h1>
 
 <div class="kontaktinfo1">
@@ -27,7 +30,7 @@
 
 <div class="kontaktvideo">
     <video width="300" autoplay muted loop playsinline class="no-picture-in-picture">
-        <source src="/Dateien/Home/IMG_8544 - Trim.mp4" type="video/mp4">    
+        <source src="/Dateien/Kontakt/IMG_8544 - Trim.mp4" type="video/mp4">    
     </video>
 </div>
 
