--- a/welkeweise.html
+++ b/welkeweise.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="style.css">
 </nav>
 
+<div class="custom-cursor" id="customCursor"></div>
+  <script src="script.js"></script>
+
 <h1>Welke Weise</h1>
 
 <div class="welkeweiseinfo">
