--- a/projekt1.html
+++ b/projekt1.html
@@ -23,7 +23,7 @@
 
 <div class="projektnachtfallen">
     <a href="nachtfallen.html">
-        <img src="/Dateien/Nachtfallen/Badewanne weiß.png" width="350">
+        <img src="Dateien/Nachtfallen/Badewanne%20weiß.png" width="350">
     </a>
     <h3>Nachtfallen</h3>
 </div>
