--- a/schlehenschwärmer.html
+++ b/schlehenschwärmer.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="schleheninfo2">
-    <h3>Durch die Behandlung mit Textilhärter, erlangen die applizierten, in Falten 
+    <h3>Durch die Behandlung mit Textilhärter, erlangen die<br> applizierten, in Falten 
         gelegten Stoffbahnen eine Formbeständigkeit, schichten sich und werden wie 
         <br>die Flügel einer Motte zum Saum hin ausladender. 
     </h3>
