--- a/projekt1.html
+++ b/projekt1.html
@@ -46,7 +46,7 @@
 
 <div class="projektnacht">
     <a href="nacht.html">
-        <img src="/Dateien/Nachtfallen/Badewanne weiß.png" width="500">
+        <img src="/Dateien/Nachtfallen/Badewanne weiß.jpg" width="500">
     </a>
     <h3>Nachtfallen</h3>
 </div>
