i changed a lot and also used jpg pictures in the folder Nachtfallen

--- a/Nachtfallen.html
+++ b/Nachtfallen.html
@@ -35,7 +35,7 @@
 </div>
 
 <div class="nachtfallenfoto1">
-    <img src="Dateien/Nachtfallen/Nachtfallen 1.jpg" width="400">
+    <img src="Dateien/Nachtfallen/Nachtfallen1.jpg" width="400">
 </div>
 
 <div class="nachtfallenfoto2">
