--- a/Nachtfallen.html
+++ b/Nachtfallen.html
@@ -35,27 +35,27 @@
 </div>
 
 <div class="nachtfallenfoto1">
-    <img src="/Dateien/Nachtfallen/eins.jpg" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 1.png" width="400">
 </div>
 
 <div class="nachtfallenfoto2">
-    <img src="/Dateien/Nachtfallen/zwei.jpg" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 2.png" width="400">
 </div>
 
 <div class="nachtfallenfoto3">
-    <img src="/Dateien/Nachtfallen/drei.jpg" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 3.png" width="400">
 </div>
 
 <div class="nachtfallenfoto4">
-    <img src="/Dateien/Nachtfallen/vier.jpg" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 4.png" width="400">
 </div>
 
 <div class="nachtfallenfoto5">
-    <img src="/Dateien/Nachtfallen/fuenf.jpg" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 5.png" width="400">
 </div>
 
 <div class="nachtfallenfoto6">
-    <img src="/Dateien/Nachtfallen/sechs.jpg" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen 6.png" width="400">
 </div>
 
 <div class="fußleistenacht">
