--- a/nacht.html
+++ b/nacht.html
@@ -35,27 +35,27 @@
 </div>
 
 <div class="nachtfallenfoto1">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 1.png" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen1.png" width="400">
 </div>
 
 <div class="nachtfallenfoto2">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 2.png" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen2.png" width="400">
 </div>
 
 <div class="nachtfallenfoto3">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 3.png" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen3.png" width="400">
 </div>
 
 <div class="nachtfallenfoto4">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 4.png" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen4.png" width="400">
 </div>
 
 <div class="nachtfallenfoto5">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 5.png" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen5.png" width="400">
 </div>
 
 <div class="nachtfallenfoto6">
-    <img src="/Dateien/Nachtfallen/Nachtfallen 6.png" width="400">
+    <img src="/Dateien/Nachtfallen/Nachtfallen6.png" width="400">
 </div>
 
 <div class="fußleistenacht">
